# rs-codeinsight

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  bash.exe.stackdump  index.html
.github/workflows/: ci.yml  publish.yml  release.yml  wasm-check.yml  wasm.yml
.gm/: .instructions-shipped-manifest.json  last-dispatch-ts  last-instruction-ts  last-prompt.txt  mutables.yml  next-step.md  prd.yml
.gm/memories/: .flat-export-done  mem-23d03a5ef2a2f6dd-610.md  mem-6e8ba2cf30b4e865-480.md  mem-7a04ec7f25c7e06f-907.md  mem-e601929a819628a8-1034.md  mem-f0b2b82d8fba5e2d-742.md
site/: package-lock.json  package.json  theme.mjs
site/content/globals/: site.yaml
site/content/pages/: home.yaml
src/: analyzer.rs  config.rs  conventions.rs  depgraph.rs  formatter.rs  git.rs  json_output.rs  lang.rs  lib.rs  locations.rs  main.rs  models.rs  project.rs  scanner.rs  search.rs  tooling.rs
src/conventions/: go.rs  js.rs  mod.rs  python.rs  rust.rs
tests/: real_analysis.rs
