[package]
name = "rs-codeinsight"
version = "0.3.0"
edition = "2021"
description = "Fast codebase analyzer using tree-sitter. Instant project understanding for AI coding tools."
repository = "https://github.com/AnEntrypoint/rs-codeinsight"
homepage = "https://github.com/AnEntrypoint/rs-codeinsight"
license = "MIT"
readme = "README.md"
keywords = ["tree-sitter", "code-analysis", "ast", "codebase", "ai-tools"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "rs_codeinsight"
path = "src/lib.rs"

[[bin]]
name = "codeinsight"
path = "src/main.rs"

[features]
default = ["all-languages"]
all-languages = [
    "javascript","typescript","python","rust","go","c","cpp","java","json","ruby","csharp","php",
    "html","css","bash","yaml","markdown","scala","haskell","ocaml",
    "elixir","erlang","zig","lua","regex","r","julia","swift",
]
javascript = ["dep:tree-sitter-javascript"]
typescript = ["dep:tree-sitter-typescript"]
python = ["dep:tree-sitter-python"]
rust = ["dep:tree-sitter-rust"]
go = ["dep:tree-sitter-go"]
c = ["dep:tree-sitter-c"]
cpp = ["dep:tree-sitter-cpp"]
java = ["dep:tree-sitter-java"]
json = ["dep:tree-sitter-json"]
ruby = ["dep:tree-sitter-ruby"]
csharp = ["dep:tree-sitter-c-sharp"]
php = ["dep:tree-sitter-php"]
html = ["dep:tree-sitter-html"]
css = ["dep:tree-sitter-css"]
bash = ["dep:tree-sitter-bash"]
yaml = ["dep:tree-sitter-yaml"]
markdown = ["dep:tree-sitter-md"]
scala = ["dep:tree-sitter-scala"]
haskell = ["dep:tree-sitter-haskell"]
ocaml = ["dep:tree-sitter-ocaml"]
elixir = ["dep:tree-sitter-elixir"]
erlang = ["dep:tree-sitter-erlang"]
zig = ["dep:tree-sitter-zig"]
lua = ["dep:tree-sitter-lua"]
regex = ["dep:tree-sitter-regex"]
r = ["dep:tree-sitter-r"]
julia = ["dep:tree-sitter-julia"]
swift = ["dep:tree-sitter-swift"]

[dependencies]
tree-sitter = "0.24"
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.23", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-json = { version = "0.23", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }
tree-sitter-php = { version = "0.23", optional = true }
tree-sitter-html = { version = "0.23", optional = true }
tree-sitter-css = { version = "0.25", optional = true }
tree-sitter-bash = { version = "0.25", optional = true }
tree-sitter-yaml = { version = "0.7", optional = true }
tree-sitter-md = { version = "0.5", optional = true }
tree-sitter-scala = { version = "0.26", optional = true }
tree-sitter-haskell = { version = "0.23", optional = true }
tree-sitter-ocaml = { version = "0.24", optional = true }
tree-sitter-elixir = { version = "0.3", optional = true }
tree-sitter-erlang = { version = "0.16", optional = true }
tree-sitter-zig = { version = "1", optional = true }
tree-sitter-lua = { version = "0.5", optional = true }
tree-sitter-regex = { version = "0.25", optional = true }
tree-sitter-r = { version = "1", optional = true }
tree-sitter-julia = { version = "0.23", optional = true }
tree-sitter-swift = { version = "0.7", optional = true }
walkdir = "2"
ignore = "0.4"
rayon = "1.10"
md-5 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
